# bussinf

./: CMakeLists.txt  TemplateInstruction  email
Gen name/: GenName.cpp  GenName.h  address  gen_data  names  time_using
Genavto/: auc  defects  engine  gen_data  main.cpp  mark  type
Gencard/: author  avail  gen_card  name  publ  section  val  year
Genname/: books  email  ganer  gen_data  time_take  time_using
Genpers/: amt  perm  prices  shelf  sold  time_buy
Gensick/: med  name  proc  symp
headers/: Auto.h  BD.h  BDcommunity.h  Cartoteka.h  Commands.h  DataBase.h  DataIO.h  Data_Base.h  Reader.h  Shopper.h  medic.h  sick.h
src/: Auto.cpp  BDcommunity.cpp  Cartoteka.cpp  DataBase.cpp  DataIO.cpp  Reader.cpp  Shopper.cpp  main.cpp  medic.cpp  sick.cpp
